--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,8 @@
 }
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));;
   justify-content: space-between;
-  padding: 0px 0px 0px 80px;
 }
 .title {
   font-size: 4rem;
